use python to get api request

--- a/doc/日志/412.md
+++ b/doc/日志/412.md
@@ -10,3 +10,4 @@ cd /sys/bus/w1/devices/
 然后可以在devices目录下看到
 28-01187a999cff  w1_bus_master1这两个文件
 28-01187a999cff文件夹里的w1_slave就可以读取到温度数据，需要除以1000
+然后把这个获取数据的代码整合到主程序中
