--- a/doc/环境配置.md
+++ b/doc/环境配置.md
@@ -23,4 +23,8 @@ centos:
         docker run -itd --name redis-bs -p 6379:6379 redis
         docker exec -it redis-test /bin/bash redis-cli
 
+    安装nestjs环境:
+        安装node,npm
+        看readme.md
+
     
